2010-01-15

	* libsylph/imap.[ch]
	  src/summaryview.c: save color labels on IMAP server using custom
	  keywords (partially compatible with Thunderbird).

2010-01-14

	* version 3.0.0beta6

2010-01-14

	* libsylph/utils.[ch]
	  libsylph/imap.c
	  src/colorlabel.[ch]
	  src/sylpheed.rc.in
	  src/prefs_common_dialog.c
	  src/about.c
	  README.ja
	  README: updated copyright year.

2010-01-14

	* libsylph/utils.c: to_unumber(); return 0 on error (-1 will return
	  UINT_MAX). Fixes the bug that IMAP caches get wrongly deleted.

2010-01-13

	* version 3.0.0beta5

2010-01-13

	* libsylph/utils.c: to_unumber(): added.
	  remove_numbered_files()
	  remove_expired_files(): made filename to number conversion unsigned
	  (fixes undeleted IMAP caches with UIDs larger than INT_MAX).

2010-01-13

	* libsylph/imap.c: imap_cmd_append(): added date-time info on APPEND
	  using Date: header (for Gmail to display received date).

2010-01-12

	* configure.in: added workaround for crash by enchant with zemberek.

2010-01-12

	* configure.in: added AM_SILENT_RULES (requires automake 1.11)
	  (thanks to Antonio Ospite).

2010-01-06

	* src/colorlabel.[ch]: fixed a memory leak.

2010-01-05

	* src/colorlabel.[ch]
	  src/prefs_common_dialog.c: implemented the UI for customizing
	  color label text.

2009-12-28

	* src/main.c: lock_socket_input_cb(): added missing lock on I/O
	  callback (fixes freeze on remote commands).

2009-12-28

	* src/update_check.[ch]
	  src/main.c
	  src/prefs_common_dialog.c
	  src/mainwindow.c: added configure option '--disable-updatecheck'
	  which disables the update check feature.
	* src/compose.c: removed redundant code.

2009-12-24

	* src/colorlabel.[ch]
	  src/main.c: made color label text customizable
	  (~/.sylpheed-2.0/colorlabelrc).

2009-12-22

	* src/colorlabel.[ch]: implemented a feature to change color label
	  text.

2009-12-21

	* libsylph/utils.[ch]
	  libsylph/prefs_common.[ch]
	  src/compose.c