@@ -1,3 +1,8 @@
+2010-01-19
+
+	* src/summaryview.c: summary_show(): prevent beep when changing to
+	  folders which are sorted in decending order.
+
 2010-01-15
 
 	* libsylph/imap.[ch]
